--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ target.p2/workspace/
 
 # PPT stuff
 ~*
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
